Added no artefact to imaging artefacts

--- a/annotation.conf
+++ b/annotation.conf
@@ -47,7 +47,7 @@ StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProto
 AttenuationCorrectionNonAttenuationCorrection Arg:ImagingProtocol, Value:AttenuationCorrection|NoAttenuationCorrection
 GatedNonGated Arg:ImagingProtocol, Value:Gated|NonGated
 MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|NoMotionCorrection
-ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|OverlapOfHemidiaphragm
+ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|OverlapOfHemidiaphragm|NoArtefact
 QualityOfScan Arg:ImagingProtocol, Value:GoodQuality|PoorQuality
 
 Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest
