Updated wall motion abnormalities

--- a/annotation.conf
+++ b/annotation.conf
@@ -60,7 +60,7 @@ LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnte
 ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|#Segments|<ENTITY>
 SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
-WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalities|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
+WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalitiesatRest|AbsenceofWallMotionAbnormalitiesatStress|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
 LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
