--- a/annotation.conf
+++ b/annotation.conf
@@ -30,7 +30,7 @@ MonthDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12
 YearDate Arg:Identifiers, Value:2022|2021|2020|2019|2018|2017|2016|2015|2014|2013|2012|2011|2010|2009|2008|2007|2006|2005|2004|2003|2002|2001|2000
 
 Indicationfortest Arg:ClinicalInformationPreTest, Value:CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|ChestPain|Angina|CoronaryArteryBlockage|PastMI|ExerciseTestorETTChanges|LVDysfunction|LVImpairment|ParoxysmalAF|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|PriorCardiacEvents|PriorCardiacProcedures|WallMotionAbnormalities
-Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations|RaisedTroponine|ECGChanges|Pacemaker|AlcoholIntake|PeripheralVascularDisease|PeripheralArterialDisease|COPD|Dementia|AirwaysObstruction
+Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Obesity|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations|RaisedTroponine|ECGChanges|Pacemaker|AlcoholIntake|PeripheralVascularDisease|PeripheralArterialDisease|COPD|Dementia|AirwaysObstruction
 Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|Smoking|Hypercholesterolaemia|LeftVentricularHypertrophy|Hyperlipidaemia|Atherosclerosis|InsulinResistance|HeartFailure|DilatedCardiomyopathy|AgeMen>55|AgeWomen>65
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
