--- a/annotation.conf
+++ b/annotation.conf
@@ -20,7 +20,7 @@ Normality Arg:<ENTITY>, Value:Normal|Abnormal
 Percentage Arg:<ENTITY>, Value:<ENTITY>
 ProbabilityorLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
 Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
-Side Arg:<ENTITY>, Value:Left|Right
+Side Arg:<ENTITY>, Value:Left|Right|Upper|Lower
 Type Arg:<ENTITY>, Value:<ENTITY>
 
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber|Gender
