End Systolic and End Diastolic Volumes removed from global ventricular function and placed in Ventricular Dilatation

--- a/annotation.conf
+++ b/annotation.conf
@@ -50,7 +50,7 @@ MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|
 ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|OverlapOfHemidiaphragm|NoArtefact
 QualityOfScan Arg:ImagingProtocol, Value:GoodQuality|PoorQuality
 
-Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest
+Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest|EndSystolicVolume|EndDiastolicVolume
 RightVentricularUptake Arg:StudyRiskMarkers, Value:IncreasedPostStress|IncreasedPostRest|NoIncreasePostStress|NoIncreaseAtRest
 TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
@@ -64,7 +64,7 @@ WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormal
 LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
-GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:NoEF|PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment|EndSystolicVolume|EndDiastolicVolume
+GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:NoEF|PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
 
 Perfusion Arg:SummaryandConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
 TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
