Probability or likelihood updated

--- a/annotation.conf
+++ b/annotation.conf
@@ -18,7 +18,7 @@ Location Arg:<ENTITY>, Value:<ENTITY>
 Negation Arg:<ENTITY>, Value:Affirmed|Negated
 Normality Arg:<ENTITY>, Value:Normal|Abnormal
 Percentage Arg:<ENTITY>, Value:<ENTITY>
-ProbabilityorLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
+ProbabilityOrLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
 Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
 Side Arg:<ENTITY>, Value:Left|Right|Upper|Lower
 Type Arg:<ENTITY>, Value:<ENTITY>
