Summary and Conclusion updated

--- a/annotation.conf
+++ b/annotation.conf
@@ -7,7 +7,7 @@ StudyRiskMarkers
 PerfusionResults
 WallMotionResults
 GlobalSystolicFunction
-SummaryandConclusions
+SummaryAndConclusions
 
 [events]
 [attributes]
@@ -66,11 +66,11 @@ SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|Relative
 
 GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:NoEF|PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
 
-Perfusion Arg:SummaryandConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
-TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
-SeverityofAbnormalities Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
-LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-Diagnosis Arg:SummaryandConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
-Prognosis Arg:SummaryandConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
-LevelOfRisk Arg:SummaryandConclusions, Value:LowRisk|IntermediateRisk|HighRisk
-Recommendations Arg:SummaryandConclusions, Value:SingleVesselDisease|MedicalManagement|InvasiveManagementNotRecommended|InvasiveManagementExpectedtoImproveOutcome|InvasiveManagementNotExpectedtoImproveOutcome|FurtherInvestigationsRecommended|FollowUp|UnderObservation
+Perfusion Arg:SummaryAndConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
+TypeOfAbnormalities Arg:SummaryAndConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
+SeverityofAbnormalities Arg:SummaryAndConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
+LocationCoronaryArteryTerritory Arg:SummaryAndConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+Diagnosis Arg:SummaryAndConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
+Prognosis Arg:SummaryAndConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
+LevelOfRisk Arg:SummaryAndConclusions, Value:LowRisk|IntermediateRisk|HighRisk
+Recommendations Arg:SummaryAndConclusions, Value:SingleVesselDisease|MedicalManagement|InvasiveManagementNotRecommended|InvasiveManagementExpectedtoImproveOutcome|InvasiveManagementNotExpectedtoImproveOutcome|FurtherInvestigationsRecommended|FollowUp|UnderObservation
