Intervention After Stress

--- a/annotation.conf
+++ b/annotation.conf
@@ -36,11 +36,11 @@ Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi|Thallium
 Dose Arg:StressingProtocol, Value:MBq|mcg|<ENTITY>
-StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Nausea|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
-TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
-LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
-InterventionafterStress_Results Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
-LevelofStress Arg:StressingProtocol, Value:Adequate|Suboptimal
+StressResponseOrSideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Nausea|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
+TypeOfECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
+LocationOfECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
+InterventionAfterStress Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
+LevelOfStress Arg:StressingProtocol, Value:Adequate|Suboptimal
 
 OneOrTwoDayProtocol Arg:ImagingProtocol, Value:OneDayProtocol|TwoDayProtocol
 StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnly
