--- a/annotation.conf
+++ b/annotation.conf
@@ -40,7 +40,7 @@ StressResponseOrSideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|C
 TypeOfECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
 LocationOfECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
 InterventionAfterStress Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
-LevelOfStress Arg:StressingProtocol, Value:Adequate|Suboptimal
+LevelOfStress Arg:StressingProtocol, Value:Adequate|Suboptimal|StressTestAbandoned
 
 OneOrTwoDayProtocol Arg:ImagingProtocol, Value:OneDayProtocol|TwoDayProtocol
 StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnly
