--- a/annotation.conf
+++ b/annotation.conf
@@ -56,19 +56,19 @@ TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderli
 IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
 PerfusionDefects Arg:PerfusionResults, Value:PerfusionWithinNormalLimits|Reversible|Fixed
-LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|#Segments|<ENTITY>
-SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
+LocationOfPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall
+ExtentOfPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|#Segments|<ENTITY>
+SeveretyOfPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
 WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalitiesatRest|AbsenceofWallMotionAbnormalitiesatStress|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
-LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
-SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
+LocationOfWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall
+SeverityOfWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
 GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:NoEF|PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
 
 Perfusion Arg:SummaryAndConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
 TypeOfAbnormalities Arg:SummaryAndConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
-SeverityofAbnormalities Arg:SummaryAndConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
+SeverityOfAbnormalities Arg:SummaryAndConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
 LocationCoronaryArteryTerritory Arg:SummaryAndConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
 Diagnosis Arg:SummaryAndConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
 Prognosis Arg:SummaryAndConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
