--- a/annotation.conf
+++ b/annotation.conf
@@ -22,6 +22,10 @@ ProbabilityOrLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
 Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
 Side Arg:<ENTITY>, Value:Left|Right|Upper|Lower
 Type Arg:<ENTITY>, Value:<ENTITY>
+PostCode Arg:<ENTITY>, Value:<ENTITY>
+DayDate Arg:<ENTITY>, Value:01|02|03|04|05|06|07|08|09|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31
+MonthDate Arg:<ENTITY>, Value:01|02|03|04|05|06|07|08|09|10|11|12
+YearDate Arg:<ENTITY>, Value:2022|2021|2020|2019|2018|2017|2016|2015|2014|2013|2012|2011|2010|2009|2008|2007|2006|2005|2004|2003|2002|2001|2000
 
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber|Gender
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
