Added significant to perfusion summary and conclusions

--- a/annotation.conf
+++ b/annotation.conf
@@ -70,7 +70,7 @@ SeverityOfWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|Relative
 
 GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:NoEF|PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
 
-Perfusion Arg:SummaryAndConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
+Perfusion Arg:SummaryAndConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant|Significant
 TypeOfAbnormalities Arg:SummaryAndConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
 SeverityOfAbnormalities Arg:SummaryAndConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
 LocationCoronaryArteryTerritory Arg:SummaryAndConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Anterior|Inferior
