--- a/annotation.conf
+++ b/annotation.conf
@@ -76,5 +76,5 @@ SeverityOfAbnormalities Arg:SummaryAndConclusions, Value:SignificantReversibilit
 LocationCoronaryArteryTerritory Arg:SummaryAndConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Anterior|Inferior
 Diagnosis Arg:SummaryAndConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
 Prognosis Arg:SummaryAndConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
-LevelOfRisk Arg:SummaryAndConclusions, Value:LowRisk|IntermediateRisk|HighRisk
+LevelOfRisk Arg:SummaryAndConclusions, Value:LowRisk|IntermediateRisk|HighRisk|#PercentageRiskofCardiacEventsPerYear
 Recommendations Arg:SummaryAndConclusions, Value:SingleVesselDisease|MedicalManagement|InvasiveManagementNotRecommended|InvasiveManagementExpectedtoImproveOutcome|InvasiveManagementNotExpectedtoImproveOutcome|FurtherInvestigationsRecommended|FollowUp|UnderObservation
