Removed entity from Extent Of Perfusion Defects

--- a/annotation.conf
+++ b/annotation.conf
@@ -61,7 +61,7 @@ IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
 PerfusionDefects Arg:PerfusionResults, Value:PerfusionWithinNormalLimits|Reversible|Fixed
 LocationOfPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall
-ExtentOfPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|#Segments|<ENTITY>
+ExtentOfPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|#Segments
 SeveretyOfPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
 WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalitiesatRest|AbsenceofWallMotionAbnormalitiesatStress|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
