Using older file from June 2022

--- a/annotation.conf
+++ b/annotation.conf
@@ -7,7 +7,7 @@ StudyRiskMarkers
 PerfusionResults
 WallMotionResults
 GlobalSystolicFunction
-SummaryAndConclusions
+SummaryandConclusions
 
 [events]
 [attributes]
@@ -18,14 +18,10 @@ Location Arg:<ENTITY>, Value:<ENTITY>
 Negation Arg:<ENTITY>, Value:Affirmed|Negated
 Normality Arg:<ENTITY>, Value:Normal|Abnormal
 Percentage Arg:<ENTITY>, Value:<ENTITY>
-ProbabilityOrLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
+ProbabilityorLikelihood Arg:<ENTITY>, Value:VeryLow|Low|High|VeryHigh
 Severity Arg:<ENTITY>, Value:Mild|Moderate|Severe|BorderlineInsignificant|BorderlineSignificant
-Side Arg:<ENTITY>, Value:Left|Right|Upper|Lower
+Side Arg:<ENTITY>, Value:Left|Right
 Type Arg:<ENTITY>, Value:<ENTITY>
-PostCode Arg:<ENTITY>, Value:<ENTITY>
-DayDate Arg:<ENTITY>, Value:01|02|03|04|05|06|07|08|09|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31
-MonthDate Arg:<ENTITY>, Value:01|02|03|04|05|06|07|08|09|10|11|12
-YearDate Arg:<ENTITY>, Value:2022|2021|2020|2019|2018|2017|2016|2015|2014|2013|2012|2011|2010|2009|2008|2007|2006|2005|2004|2003|2002|2001|2000
 
 PatientIdentifiers Arg:Identifiers, Value:Name|DateOfBirth|HospitalNumber|HomeAddress|PostCode|NHSNumber|Gender
 StudyIdentifiers Arg:Identifiers, Value:ReferringClinician|ReportingCardiologist|DateOfScan|DateOfReport|Department|TypeOfScan
@@ -33,18 +29,18 @@ DayDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12|13|14|15|16|1
 MonthDate Arg:Identifiers, Value:01|02|03|04|05|06|07|08|09|10|11|12
 YearDate Arg:Identifiers, Value:2022|2021|2020|2019|2018|2017|2016|2015|2014|2013|2012|2011|2010|2009|2008|2007|2006|2005|2004|2003|2002|2001|2000
 
-Indicationfortest Arg:ClinicalInformationPreTest, Value:PreoperativeEvaluation|SuspectedAngina|LowEFUnexplained|SignificantArrythmias|AbnormalrestECG|WallMotionAbnormalitiesbyEcho|AssessmentofViability|HighCoronaryCalciumScore|AbnormalExerciseStressTest|AbnormalCoronaryCTA|MultipleRiskFactors|SevereFamilyCoronaryHistory|ShortnessofBreath|PeriferalVascularDiseaseIncludingCAD|TroponinElevation|CHF|Cardiomyopathy|Syncope|Palpitations|Dizziness|ValveDisease|CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|ChestPain|Angina|CoronaryArteryDisease|PastMI|ExerciseTestorETTChanges|LVDysfunction|LVImpairment|ParoxysmalAF|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|PriorCardiacEvents|PriorCardiacProcedures|WallMotionAbnormalities
-ComorbiditiesOrBaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Obesity|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations|RaisedTroponine|ECGChanges|Pacemaker|AlcoholIntake|PeripheralVascularDisease|PeripheralArterialDisease|COPD|Dementia|AirwaysObstruction
+Indicationfortest Arg:ClinicalInformationPreTest, Value:CoronaryArteryStenosis|AssessmentofInducibleIschaemia|ECGChanges|StressECGChanges|ChestTightness|ChestPain|Angina|CoronaryArteryBlockage|PastMI|ExerciseTestorETTChanges|LVDysfunction|LVImpairment|ParoxysmalAF|RiskAssessmentorStratificationPreSurgery|ShortnessOfBreath|IschaemicBurden|PriorCardiacEvents|PriorCardiacProcedures|WallMotionAbnormalities
+Comorbidities/BaselineConditions Arg:ClinicalInformationPreTest, Value:OA|Overweight|Claustrophobia|BaselineTachycardia|KidneyDisease|PreviousStroke|Palpitations|RaisedTroponine|ECGChanges|Pacemaker|AlcoholIntake|PeripheralVascularDisease|PeripheralArterialDisease|COPD|Dementia|AirwaysObstruction
 Riskfactors Arg:ClinicalInformationPreTest, Value:HighBloodPressure|Hypertension|Diabetes|Smoking|Hypercholesterolaemia|LeftVentricularHypertrophy|Hyperlipidaemia|Atherosclerosis|InsulinResistance|HeartFailure|DilatedCardiomyopathy|AgeMen>55|AgeWomen>65
 
 StressTechnique Arg:StressingProtocol, Value:DypiridamoleWithErgometry|AdenosineWithErgometry|DobutamineWithErgometry|ErgometryOnly|Regadenoson|AdenosineOnly
 Radiopharmaceutical Arg:StressingProtocol, Value:Tetrofosmin|Sestamibi|Thallium
 Dose Arg:StressingProtocol, Value:MBq|mcg|<ENTITY>
-StressResponseOrSideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Nausea|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
-TypeOfECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
-LocationOfECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
-InterventionAfterStress Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
-LevelOfStress Arg:StressingProtocol, Value:Adequate|Suboptimal|StressTestAbandoned
+StressResponse_SideEffectstoStress Arg:StressingProtocol, Value:Assymptomatic|ChestPain|ChestDyscomfort|ChestTightnesst|ShortnessOfBreath|Hypertension|Flushing|Vomiting|Retching|Coughing|HaemodynamicChanges|PoorHeartRateResponse|LightHeadedness|ECGChanges
+TypeofECGChanges Arg:StressingProtocol, Value:NoSTSegmentChanges|RBBB|LBBB|STSegmentDepression|STSegmentElevation|STSegmentSag|AFThroughout|Bradychardia|Tachycardia|InducibleECGChanges
+LocationofECGChanges Arg:StressingProtocol, Value:InferiorChestLeads|LateralChestLeads|InferoLateral|AnteriorLeads|AnteroLateralLeads
+InterventionafterStress_Results Arg:StressingProtocol, Value:ConservativeMeasures|PharmacologicalIntervention|CPR
+LevelofStress Arg:StressingProtocol, Value:Adequate|Suboptimal
 
 OneOrTwoDayProtocol Arg:ImagingProtocol, Value:OneDayProtocol|TwoDayProtocol
 StressRestSequence Arg:ImagingProtocol, Value:StressRestProtocol|RestStressProtocol|StressOnly
@@ -54,27 +50,27 @@ MotionCorrectionNonMotionCorrection Arg:ImagingProtocol, Value:MotionCorrection|
 ImagingArtefacts Arg:ImagingProtocol, Value:AttenuationArtefact|MovementArtefact|ForeignBody|ElevationOfHemidiaphragm|OverlapOfHemidiaphragm|NoArtefact
 QualityOfScan Arg:ImagingProtocol, Value:GoodQuality|PoorQuality
 
-VentricularDilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest|EndSystolicVolume|EndDiastolicVolume
+Ventricular Dilatation Arg:StudyRiskMarkers, Value:LeftVentricularDilatation|RightVentricularDilatation|NormalCavity|AbnormalPostStress|AbnormalPostRest
 RightVentricularUptake Arg:StudyRiskMarkers, Value:IncreasedPostStress|IncreasedPostRest|NoIncreasePostStress|NoIncreaseAtRest
 TransientIschaemicDilatation Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 IncreasedPulmonaryUptake Arg:StudyRiskMarkers, Value:Present|Absent|Borderline
 
 PerfusionDefects Arg:PerfusionResults, Value:PerfusionWithinNormalLimits|Reversible|Fixed
-LocationOfPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall
-ExtentOfPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|#Segments
-SeveretyOfPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
+LocationofPerfusionDefects Arg:PerfusionResults, Value:Proximal|Distal|BasalAnterior|Anterior|Inferior|Lateral|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+ExtentofPerfusionDefects Arg:PerfusionResults, Value:SSS|SSS%|SRS|SRS%|SDS|SDS%|%Reversibility|%Deficit|#Segments|TPD|%MyocardiumAffected|#Segments|<ENTITY>
+SeveretyofPerfusionDefects Arg:PerfusionResults, Value:Minor|MinorToMild|Mild|MildToModerate|Moderate|ModerateToSevere|Severe
 
 WallMotionAbnormalities Arg:WallMotionResults, Value:AbsenceofWallMotionAbnormalitiesatRest|AbsenceofWallMotionAbnormalitiesatStress|RestingWallMotionAbnormalities|InducibleWallMotionAbnormalities
-LocationOfWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|Anterior|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall
-SeverityOfWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
+LocationofWallMotionAbnormalities Arg:WallMotionResults, Value:Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+SeverityofWallMotionAbnormalities Arg:WallMotionResults, Value:Akinesia|RelativeHypokinesia|ModerateToSevere|Dyskinesia
 
-GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:NoEF|PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
+GlobalLeftVentricularFunction Arg:GlobalSystolicFunction, Value:PostStressEF%|PostRestEF%|NormalVentricularFunction|MildImpairment|ModerateImpairment|SevereImpairment
 
-Perfusion Arg:SummaryAndConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant|Significant
-TypeOfAbnormalities Arg:SummaryAndConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
-SeverityOfAbnormalities Arg:SummaryAndConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
-LocationCoronaryArteryTerritory Arg:SummaryAndConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Anterior|Inferior
-Diagnosis Arg:SummaryAndConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
-Prognosis Arg:SummaryAndConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
-LevelOfRisk Arg:SummaryAndConclusions, Value:LowRisk|IntermediateRisk|HighRisk|#PercentageRiskofCardiacEventsPerYear
-Recommendations Arg:SummaryAndConclusions, Value:SingleVesselDisease|MedicalManagement|InvasiveManagementNotRecommended|InvasiveManagementExpectedtoImproveOutcome|InvasiveManagementNotExpectedtoImproveOutcome|FurtherInvestigationsRecommended|FollowUp|UnderObservation
+Perfusion Arg:SummaryandConclusions, Value:NormalStudy|AbnormalStudy|BorderlineSignificant|BorderlineInsignificant
+TypeOfAbnormalities Arg:SummaryandConclusions, Value:Reversibility|FixedPerfusionDefect|Viability|NoViability|ImpairedLeftVentricle|RegionalWallMotionAbnormalities
+SeverityofAbnormalities Arg:SummaryandConclusions, Value:SignificantReversibility|NonSignificantReversibility|SevereCardiacIschaemia|Minor|Mild|LowGrade|Moderate|#Segments
+LocationCoronaryArteryTerritory Arg:SummaryandConclusions, Value:LAD|RCA|LCX|Proximal|Distal|BasalAnterior|BasalAnteroSeptal|BasalInferoSeptal|BasalInferior|BasalInferoLateral|BasalAnteroLateral|MidAnterior|MidAnteroseptal|MidInferoSeptal|MidInferior|MidInferoLateral|MidAnteroLateral|ApicalAnterior|ApicalSeptal|ApicalInferior|ApicalLateral|Apex|MidSegments|MidToBasalSegments|ApicalToMidSegments|SeptalWall|Mid
+Diagnosis Arg:SummaryandConclusions, Value:LikelihoodofObstructiveCoronaryArteryDisease
+Prognosis Arg:SummaryandConclusions, Value:GoodPrognosis|IntermediatePrognosis|PoorPrognosis
+LevelOfRisk Arg:SummaryandConclusions, Value:LowRisk|IntermediateRisk|HighRisk
+Recommendations Arg:SummaryandConclusions, Value:SingleVesselDisease|MedicalManagement|InvasiveManagementNotRecommended|InvasiveManagementExpectedtoImproveOutcome|InvasiveManagementNotExpectedtoImproveOutcome|FurtherInvestigationsRecommended|FollowUp|UnderObservation
